# gosh-remote

./: .gitignore  Cargo.toml  Makefile.toml  README.md
src/: base.rs  cli.rs  client.rs  comput.rs  interactive.rs  jobhub.rs  lib.rs  model.rs  mpi.rs  rest.rs  restful.rs  scheduler.rs  scheduler2.rs  server.rs  task.rs  worker.rs
src/rest/: client.rs  server.rs
src/scheduler/: dispatch.rs  interactive.rs
src/worker/: model.rs
