# [[file:remote.note::5bcb0b71][5bcb0b71]]
[package]
name = "gosh-remote"
version = "0.0.8"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
gosh-core = { version = ">=0.0.2", features=["adhoc"] }
gosh-runner = { version = ">=0.0.10", features=["adhoc"] }
rand = "0.8"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
# remote runner
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
clap = { version = "3.0.10", features = ["derive"] }
tempfile = "3.3"
# https://docs.rs/spmc/latest/spmc/
spmc = "0.3.0"
crossbeam-channel = "0.5"
warp = "0.3"
reqwest = { version="0.11", default-features = false, features=["json", "blocking", "rustls-tls"]}
nix = "0.23.1"
fs2 = "0.4.3"

[dev-dependencies]

[features]
adhoc = [] # for local development
# 5bcb0b71 ends here
