# [[file:remote.note::5bcb0b71][5bcb0b71]]
[package]
name = "gosh-remote"
version = "0.2.2"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Distributed parallel computing over multiple nodes."
homepage = "https://github.com/gosh-rs/gosh-remote"
repository = "https://github.com/gosh-rs/gosh-remote"
license = "GPL-3.0"
readme = "README.md"

[dependencies]
gosh-core = { version = "0.2", features = ["adhoc"] }
gosh-model = { version = "0.2", features = ["adhoc"] }
gosh-runner = { version = "0.2", features = ["adhoc"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# remote runner
tokio = { version = "1.25", features = ["full"] }
tokio-util = "0.7.5"
clap = { version = "4", features = ["derive"] }
tempfile = "3.3"
# https://docs.rs/spmc/latest/spmc/
axum = { version = "0.6.4", features = ["macros"] }
spmc = "0.3.0"
crossbeam-channel = "0.5"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls",
] }
nix = { version = "0.26" }
fs2 = "0.4.3"

[dev-dependencies]

[features]
adhoc = [] # for local development
# 5bcb0b71 ends here
